<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2015 Google Inc. All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/group_sender_id"
            android:layout_weight="0.4"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/group_sender_id_hint"
            android:id="@+id/group_sender_id"
            android:layout_weight="0.6"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/group_sender_api_key"
            android:layout_weight="0.4"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/group_api_key"
            android:layout_weight="0.6"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/group_name"
            android:textStyle="bold"
            android:layout_weight="0.4"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/group_name"
            android:layout_weight="0.6"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/group_new_name"
        android:hint="@string/group_new_name_hint" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/group_key_view">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/group_key"
            android:textStyle="bold"
            android:layout_weight="0.4"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/group_key"
            android:layout_weight="0.6"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/group_current_members"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:text="@string/group_current_members"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:id="@+id/group_current_members_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/group_removed_members"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:text="@string/group_removed_members"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:id="@+id/group_removed_members_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/group_new_members"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:text="@string/group_new_members"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:id="@+id/group_new_members_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/grey_500"
            android:textStyle="italic"
            android:text="@string/group_no_new_members"
            android:id="@+id/group_no_new_members" />
    </LinearLayout>

    <Button
        android:id="@+id/group_new_member"
        android:text="@string/group_add_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        style="?android:attr/borderlessButtonStyle"/>

   <Button
        android:id="@+id/group_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>