<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2015 Google Inc. All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/task_connectivity_constraints_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_constraints_connectivity"/>
    <RadioGroup
        android:id="@+id/task_connectivity_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_weight="0.33"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:id="@+id/task_connectivity_connected"
            android:text="@string/task_connectivity_connected"
            android:checked="true"/>
        <RadioButton
            android:layout_weight="0.33"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:id="@+id/task_connectivity_unmetered"
            android:text="@string/task_connectivity_unmetered"/>
        <RadioButton
            android:layout_weight="0.33"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:id="@+id/task_connectivity_any"
            android:text="@string/task_connectivity_any"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox android:id="@+id/task_charging_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_constraints_charging"/>
        <CheckBox android:id="@+id/task_persistence_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_constraints_persistence"/>
    </LinearLayout>
    <!-- Layout for scheduling -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/task_param1_title"
            android:text="param1"/>
        <EditText
            android:id="@+id/task_param1"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/task_param2_title"
            android:text="param2"/>
        <EditText
            android:id="@+id/task_param2"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>